# Jungle

./: .gitignore  README.md  jungle
resources/configure/tmux/: tmux.conf
resources/project_template/: .gitignore
resources/project_template/CMakeSubModule/: CMakeLists.txt
resources/project_template/SimpleCMake/: CMakeLists.txt  compile.sh
resources/project_template/SimpleCMake/src/: a.cc  main.cc
resources/project_template/SimpleMaven/: offline.sh  pom.xml  run.sh
resources/project_template/SimpleMaven/src/main/java/com/test/: Test.java
resources/project_template/SimpleMaven/src/main/resources/: log4j2.xml
resources/project_template/StandardCMake/: .gitignore  CMakeLists.txt  build.sh
resources/project_template/StandardCMake/cmake/: gtest.cmake  sub_module.cmake
resources/project_template/StandardCMake/src/: a.cc  a.h  main.cc
resources/project_template/StandardCMake/test/: test1.cc  test2.cc
script/: config_vim.sh  new_maven.sh  new_simple_cmake.sh  new_standard_cmake.sh
script/base/: config_vim.sh  install_jungle.sh  new_cmake_module.sh  new_maven.sh  new_standard_cmake.sh  ssh_tool.sh
script/pytool/: sshtool.py  timetool.py
script/pytool/module/: conf.py  path.py
